Rebranding to Stylus Hardware Anchor (SHA)

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Nexus Protocol - Environment Template
+# Stylus Hardware Anchor (SHA) - Environment Template
 # Rename this file to .env and fill in your actual values.
 
 # 64-character hex private key (WITHOUT 0x prefix)
