fix: resolve clippy naming convention and firmware library VCS error

--- a/ohr_firmware/platformio.ini
+++ b/ohr_firmware/platformio.ini
@@ -19,8 +19,8 @@ build_flags =
 
 ; 📦 Required Libraries
 lib_deps =
-    ; Cryptographic hashing for Keccak-256 (Ethereum compatibility)
-    https://github.com/lucaslira/Keccak256.git
+    # Use the registry ID instead of the git URL for CI compatibility
+    lucaslira/Keccak256 @ ^1.0.0
 
 ; ⚙️ Monitor Settings for Identity Extraction
 monitor_speed = 115200
