refactor: rename core firmware source and finalize zero-dependency config

--- a/ohr_firmware/platformio.ini
+++ b/ohr_firmware/platformio.ini
@@ -1,5 +1,5 @@
 ; Stylus Hardware Anchor - ESP32-S3 Firmware Configuration
-; Silicon-to-Blockchain Identity Binding (v1.0.0)
+; Silicon-to-Blockchain Identity Bridge (v1.0.0)
 
 [platformio]
 description = Secure Hardware Anchor for Arbitrum Stylus (Silicon Identity Bridge)
@@ -11,16 +11,11 @@ board = esp32-s3-devkitc-1
 framework = arduino
 
 ; 🚀 Optimization for Security & Performance
-build_flags = 
+build_flags =
     -D CORE_DEBUG_LEVEL=3
     -D ARDUINO_USB_MODE=1
     -D ARDUINO_USB_CDC_ON_BOOT=1
     -D PROJECT_NAME=\"Stylus_Hardware_Anchor\"
-
-; 📦 Required Libraries
-lib_deps =
-    # Use the registry ID instead of the git URL for CI compatibility
-    lucaslira/Keccak256 @ ^1.0.0
 
 ; ⚙️ Monitor Settings for Identity Extraction
 monitor_speed = 115200
