fix: replace SHA3-256 with Ethereum Keccak-256 and fix critical bugs
- Implement tiny-keccak.c with proper Keccak-256 (0x01 padding) for
  ESP-IDF build (was empty file causing linker errors)
- Create missing options.h with USE_KECCAK=1 for sha3.h dependency
- Fix unaligned uint64_t* memory access in src/main.cpp Keccak impl
- Fix domain tag length mismatch: "anchor_OHR_V1"/"anchor_RCT_V1" are
  13 chars, not 12 as constants claimed (truncated hash input)
- Replace mbedTLS SHA3-256 with Keccak-256 in anchor_ohr.cpp to match
  Solidity keccak256() and Stylus contract digests
- Fix invalid Rust edition "2024" to "2021" in oap_witness/Cargo.toml
- Add tiny-keccak.c to CMake build, remove unused mbedtls dependency
- Remove unused variable and hardcoded chip model in src/main.cpp

🤖 Generated with [Qoder][https://qoder.com]

--- a/ohr_firmware/main/CMakeLists.txt
+++ b/ohr_firmware/main/CMakeLists.txt
@@ -1,10 +1,9 @@
 idf_component_register(
-SRCS "anchor_ohr.cpp"
+SRCS "anchor_ohr.cpp" "tiny-keccak.c"
 INCLUDE_DIRS "."
 PRIV_REQUIRES
 nvs_flash
 app_update
 efuse
 esp_app_format
-mbedtls
 )
