Repo sanitation: docs index, ABI/env consistency, middleware rename, secret hygiene

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ PRIVATE_KEY=your_private_key_here
 RPC_URL=https://sepolia-rollup.arbitrum.io/rpc
 
 # (Optional) Contract Address if you have a custom deployment
-CONTRACT_ADDRESS=0x34645ff1dd8af86176fe6b28812aaa4d85e33b0d
+CONTRACT_ADDRESS=0x<your_deployed_contract_address>
