--- a/stylus_anchor/stylus_hardware_anchor/Cargo.toml
+++ b/stylus_anchor/stylus_hardware_anchor/Cargo.toml
@@ -1,28 +1,28 @@
 [package]
-name = "stylus_hardware_anchor"
+name = "stylus-hardware-anchor"
 version = "0.1.0"
 edition = "2021"
+autobins = false
 
 [dependencies]
-stylus-sdk = "=0.6.0"
+stylus-sdk = "0.6.0"
+ruint = "=1.12.3"
+alloy-primitives = "=0.7.6"
+alloy-sol-types = "=0.7.6"
 
-[patch.crates-io]
-ruint = { git = "https://github.com/recmo/uint", tag = "v1.12.3" }
+[lib]
+crate-type = ["lib", "cdylib"]
+
+[[bin]]
+name = "stylus-hardware-anchor"
+path = "src/main.rs"
 
 [features]
 export-abi = ["stylus-sdk/export-abi"]
 
-[lib]
-crate-type = ["cdylib"]
-
 [profile.release]
 codegen-units = 1
-incremental = false
-lto = "fat"
-opt-level = "z"
-panic = "abort"
 strip = true
-
-[[bin]]
-name = "anchor_anchor"
-path = "src/main.rs"
+lto = true
+panic = "abort"
+opt-level = "z"
