security: add Windows Zone.Identifier files to gitignore
Prevent Windows metadata files from being committed accidentally.
These files are created when downloading content from web browsers
and should never be part of the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,9 @@ bench_results.json
 *.bench
 ohr_firmware_stress_test/
 test_results/
+
+# =====================================
+# Windows Metadata Files
+# =====================================
+*Zone.Identifier
+*Zone.Identifier:*
