--- a/stylus_anchor/Cargo.toml
+++ b/stylus_anchor/Cargo.toml
@@ -9,6 +9,7 @@ stylus-sdk = "0.10.0"
 
 [features]
 export-abi = ["stylus-sdk/export-abi"]
+contract-client-gen = []
 
 [lib]
 crate-type = ["lib", "cdylib"]
